# modular-decomposition

python_wrapper/: Cargo.toml  pyproject.toml
python_wrapper/scripts/: example.py
python_wrapper/src/: lib.rs
python_wrapper/test/: test_modular_decomposition.py
